Fix some of the issued mention in the review

--- a/templates/etc/sentry/sentry.conf.py.j2
+++ b/templates/etc/sentry/sentry.conf.py.j2
@@ -1,3 +1,5 @@
+# {{ ansible_managed }}
+
 # This file is just Python, with a touch of Django which means
 # you can inherit and tweak settings to your hearts content.
 from sentry.conf.server import *
