--- a/templates/etc/sentry/config.yml.j2
+++ b/templates/etc/sentry/config.yml.j2
@@ -1,3 +1,5 @@
+# {{ ansible_managed }}
+
 # While a lot of configuration in Sentry can be changed via the UI, for all
 # new-style config (as of 8.0) you can also declare values here in this file
 # to enforce defaults or to ensure they cannot be changed via the UI. For more
