--- a/templates/etc/systemd/system/sentry-worker.service.j2
+++ b/templates/etc/systemd/system/sentry-worker.service.j2
@@ -5,11 +5,11 @@ After=network.target
 
 [Service]
 Type=simple
-User=sentry
-Group=sentry
-WorkingDirectory=/var/local/sentry
+User={{ sentry__user }}
+Group={{ sentry__group }}
+WorkingDirectory={{ sentry__home }}
 Environment=SENTRY_CONF=/etc/sentry
-ExecStart=/usr/local/bin/sentry run worker
+ExecStart={{ sentry__virtualenv }}/bin/sentry run worker
 
 [Install]
 WantedBy=multi-user.target
