--- a/templates/etc/systemd/system/sentry-web.service.j2
+++ b/templates/etc/systemd/system/sentry-web.service.j2
@@ -10,7 +10,7 @@ Type=simple
 User={{ sentry__user }}
 Group={{ sentry__group }}
 WorkingDirectory={{ sentry__home }}
-Environment=SENTRY_CONF=/etc/sentry
+Environment=SENTRY_CONF={{ sentry__config }}
 ExecStart={{ sentry__virtualenv }}/bin/sentry run web
 
 [Install]
