--- a/templates/etc/systemd/system/sentry-web.service.j2
+++ b/templates/etc/systemd/system/sentry-web.service.j2
@@ -8,7 +8,7 @@ Requires=sentry-cron.service
 [Service]
 Type=simple
 User={{ sentry__user }}
-Group={{ sentry__group }}
+Group=www-data
 WorkingDirectory={{ sentry__home }}
 Environment=SENTRY_CONF={{ sentry__config }}
 ExecStart={{ sentry__virtualenv }}/bin/sentry run web
